--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite preview --port $PORT --host 0.0.0.0"
+    "start": "vite preview --port ${PORT:-4173} --host 0.0.0.0 --strictPort false"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
